--- a/courses.html
+++ b/courses.html
@@ -68,7 +68,67 @@
             </article>
             <article class="course">
                 <div class="course_image">
+                    <img src="https://images.pexels.com/photos/4443160/pexels-photo-4443160.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
+                </div>
+                <div class="course_info">
+                    <h4>Responsive Social Media Website UI Design</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti facilis sunt error voluptatum rerum quod, consequuntur placeat minima iste, consequatur labore </p>
+                <a href="courses.html" class="btn btn-primary">Learn More</a>
+                </div>
+            </article>
+            <article class="course">
+                <div class="course_image">
+                    <img src="https://images.pexels.com/photos/4491461/pexels-photo-4491461.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
+                </div>
+                <div class="course_info">
+                    <h4>Responsive Social Media Website UI Design</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti facilis sunt error voluptatum rerum quod, consequuntur placeat minima iste, consequatur labore </p>
+                <a href="courses.html" class="btn btn-primary">Learn More</a>
+                </div>
+            </article>
+            <article class="course">
+                <div class="course_image">
+                    <img src="https://images.pexels.com/photos/10536106/pexels-photo-10536106.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">
+                </div>
+                <div class="course_info">
+                    <h4>Responsive Social Media Website UI Design</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti facilis sunt error voluptatum rerum quod, consequuntur placeat minima iste, consequatur labore </p>
+                <a href="courses.html" class="btn btn-primary">Learn More</a>
+                </div>
+            </article>
+            <article class="course">
+                <div class="course_image">
                     <img src="https://images.pexels.com/photos/1601773/pexels-photo-1601773.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
+                </div>
+                <div class="course_info">
+                    <h4>Responsive Social Media Website UI Design</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti facilis sunt error voluptatum rerum quod, consequuntur placeat minima iste, consequatur labore </p>
+                <a href="courses.html" class="btn btn-primary">Learn More</a>
+                </div>
+            </article>
+            <article class="course">
+                <div class="course_image">
+                    <img src="https://images.pexels.com/photos/4443178/pexels-photo-4443178.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
+                </div>
+                <div class="course_info">
+                    <h4>Responsive Social Media Website UI Design</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti facilis sunt error voluptatum rerum quod, consequuntur placeat minima iste, consequatur labore </p>
+                <a href="courses.html" class="btn btn-primary">Learn More</a>
+                </div>
+            </article>
+            <article class="course">
+                <div class="course_image">
+                    <img src="https://images.pexels.com/photos/5553078/pexels-photo-5553078.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
+                </div>
+                <div class="course_info">
+                    <h4>Responsive Social Media Website UI Design</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti facilis sunt error voluptatum rerum quod, consequuntur placeat minima iste, consequatur labore </p>
+                <a href="courses.html" class="btn btn-primary">Learn More</a>
+                </div>
+            </article>
+            <article class="course">
+                <div class="course_image">
+                    <img src="https://images.pexels.com/photos/12425927/pexels-photo-12425927.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
                 </div>
                 <div class="course_info">
                     <h4>Responsive Social Media Website UI Design</h4>
