--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
   href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
 />
 
-<style>
-   
-</style>
+<link rel="shortcut icon" href="https://www.svgrepo.com/show/382151/education-graduation-learning-school-study.svg" type="image/x-icon">
 
 </head>
 <body>
